using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationString : MonoBehaviour
{
    internal static string isIdle = "Idle";
    internal static string isWalking = "Walking";
    internal static string isRunning = "Running";
    internal static string isSprinting = "Sprinting";
    internal static string isFalling = "Falling";
    internal static string isAiming = "Aiming";
}
